--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,8 @@
-# ================================================================================
-# requirements.txt - DamaDam Scraper Dependencies
-# ================================================================================
-# Install with: pip install -r requirements.txt
-# ================================================================================
-
-# Web Scraping
-selenium==4.15.2
-
-# Google Sheets API
-gspread==6.1.0
-google-auth==2.27.0
-google-auth-oauthlib==1.2.0
-google-auth-httplib2==0.2.0
-oauth2client==4.1.3
-
-# Console Output & Logging
-colorama==0.4.6
-rich==13.7.0
-
-# Environment Variables
-python-dotenv==1.0.0
-
-# ================================================================================
-# Version Notes:
-# - selenium 4.15.2: Latest stable, supports Chrome automation
-# - gspread 6.1.0: Google Sheets API client
-# - google-auth 2.27.0: OAuth2 authentication
-# - colorama 0.4.6: Windows console color support
-# - rich 13.7.0: Beautiful terminal formatting
-# - python-dotenv 1.0.0: Load .env files
-# ================================================================================
+requests>=2.28.1
+beautifulsoup4>=4.11.1
+selenium>=4.4.3
+webdriver-manager>=3.8.5
+gspread>=5.7.0
+google-auth>=2.11.0
+python-dotenv>=0.21.0
+rich>=12.5.1
